# Photovoltaic_robot_simulator

./: .gitignore  .gitmodules  README.md  frames.gv  get_depend.sh  get_depends.txt
.catkin_tools/profiles/default/: devel_collisions.txt
datasheets/: 2025-04-02-19-43-21.bag  move_2025-04-07-14-42-14.bag  planning.bag  rviz_planning.bag  rviz_planning_1.bag  rviz_planning_2.bag  rviz_planning_3.bag  solar_move.bag  traj.bag
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/astar/: .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/lib/astar/: map_gen  master  my_map
devel/lib/pkgconfig/: astar.pc  catkin_tools_prebuild.pc
devel/share/astar/cmake/: astarConfig-version.cmake  astarConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
logs/astar/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
scripts/: record.sh  run.sh
src/astar/: CMakeLists.txt
src/astar/include/: my_Astar.h  my_GridNode.h  trans_gridNode.h  visualize.h
src/astar/launch/: custom_map.launch  my_node.launch  solarpanel_map.launch
src/astar/map/: mymap.yaml
src/astar/rviz/: custom_map.rviz  my_node.rviz  solarpanel_map.rviz
src/astar/src/: 2d_map_gen.cpp  custom_Astar.cpp  custom_master.cpp  master.cpp  my_Astar.cpp  my_map.cpp  solarpanel_map.cpp  trans_gridNode.cpp  visualize.cpp
src/navigation/mvbs_nav/: package.xml
src/navigation/mvbs_nav/config/: 1.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_bkp.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_bak.yaml  waypoints.yaml  waypoints_2.yaml  waypoints_3.yaml
src/navigation/mvbs_nav/launch/: amcl.launch  (+7 more)
src/robot_description/config/: diff_controller.yaml
src/robot_description/launch/: controller.launch  gazebo.launch  urdf.rviz
src/robot_description/meshes/: back_right_wheel.stl  lidar_link.stl
src/robot_description/urdf/: robot.gazebo  robot.trans  robot.xacro
src/robot_simulator/keyboard_teleop/: package.xml
src/robot_simulator/robot_control/: CMakeLists.txt  package.xml
src/robot_simulator/robot_control/launch/: velocity_controller.launch
src/robot_simulator/robot_control/src/: nexus_ros_force_based_move.cpp  velocity_controller.cpp  velocity_controller_mecanum.cpp
src/robot_simulator/solar_panel_urdf/: package.xml
src/robot_simulator/solar_panel_urdf/launch/: display.launch  gazebo.launch
src/robot_simulator/solar_panel_urdf/meshes/: solar_panel.stl
src/robot_simulator/solar_panel_urdf/urdf/: solar_panel.SLDASM.csv  solar_panel.SLDASM.urdf
(+58 files in other folders)
